--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -2,24 +2,80 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<LinearLayout
+
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/detail_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    android:id="@+id/relativeLayout"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
 
-    <ImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/movie_item_detail_image_view"
+    <TextView
+        android:id="@+id/movie_item_detail_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:cropToPadding="true"
-        android:scaleType="fitXY" />
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="25sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="Chappie"/>
 
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/movie_item_detail_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/movie_item_detail_title"
+        android:src="@mipmap/ic_launcher"/>
+
+    <LinearLayout
+        android:id="@+id/linearLayoutMiddle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:orientation="vertical"
+        android:layout_toRightOf="@id/movie_item_detail_image_view"
+        android:layout_below="@id/movie_item_detail_title">
+
+        <TextView
+            android:id="@+id/movie_item_detail_year"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="2015"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:layout_gravity="right"/>
+        <TextView
+            android:id="@+id/movie_item_detail_duration"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="120min"
+            android:textStyle="italic"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:layout_gravity="right"/>
+        <TextView
+            android:id="@+id/movie_item_detail_rating"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:text="8.1/10" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/movie_item_detail_description"
+        android:layout_below="@id/movie_item_detail_image_view"
+        android:layout_marginTop="10dp"
+        android:text="Description Blbalbalb a lbalb slabslab lsbl bas lkbslkab alk sbalk blks bksl bakls balk bsalkbs lkab sklabs klabk bkbs al ba"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</RelativeLayout>
+
+
+
 </android.support.v4.widget.NestedScrollView>
